--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,9 @@ variables:
 
 jobs:
 - job:
-  container: mdolab/public:u18-gcc-ompi-stable
+  container:
+    image: mdolab/public:u18-gcc-ompi-stable
+    options: -u 0
 
   steps:
   - script: docker run -t -d --name app --mount "type=bind,src=$(pwd),target=$DOCKER_MOUNT_DIR" mdolab/public:$DOCKER_TAG /bin/bash
@@ -22,8 +24,5 @@ jobs:
   - script: docker exec -it app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && pip install ."
   - script: docker exec -it app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && testflo . -v"
   - script: docker rm -f app
-  - script: docker rm -f app
-  - script: docker rm -f app
   workspace:
     clean: all
-  
