--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,14 +11,14 @@ variables:
 jobs:
 - job:
   container:
-    image: mdolab/public:u18-gcc-ompi-stable
+    image: mdolab/public:$(DOCKER_TAG)
     options: -u 0
 
   steps:
   - script: ls /home/mdolabuser/repos && pwd
   # - script: docker run -t -d --name app --mount "type=bind,src=$(pwd),target=$DOCKER_MOUNT_DIR" mdolab/public:$DOCKER_TAG /bin/bash
   # We thrown away the existing repo in Docker, and copy the new one in-place
-  - script: rm -rf $DOCKER_WORKING_DIR && cp -r . $DOCKER_WORKING_DIR"
+  - script: rm -rf $DOCKER_WORKING_DIR && cp -r . $DOCKER_WORKING_DIR
   - script: . \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make;
   - script: . \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && pip install .
   - script: . \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && testflo . -v
