--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ jobs:
 - job:
   container:
     image: mdolab/public:$(DOCKER_TAG)
-    options: -t -d -u 0
+    # options: -u 0
 
   steps:
   - script: ls -a /home/mdolabuser && pwd
