--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,7 @@ resources:
   containers:
   - container: builder
     image: mdolab/public:u18-gcc-ompi-stable
+    options: -u 0
 steps:
 - script: touch ./test.txt
   target:
