--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,9 +31,9 @@ resources:
   containers:
   - container: builder
     image: mdolab/public:u18-gcc-ompi-stable
-    options: -u mdolabuser
+    options: -u 0
 steps:
-- script: touch ./test.txt
+- script: touch /home/mdolabuser/repos/test.txt
   target:
     container: builder
 - task: Docker@2
