--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,9 @@ steps:
 - script: cp -r /home/mdolabuser/repos .
   target:
     container: builder
+-script: cd pyspline && testflo -v .
 - task: Docker@2
   inputs:
     command: stop
     container: builder
+
