--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,10 @@ jobs:
     vmImage: 'ubuntu-latest'
   container:
     image: mdolab/public:$(DOCKER_TAG)
+    options: -u root
   steps:
   - script: ls && ls -a /home/mdolabuser && pwd
+  - script: printenv
   # - script: rm -rf $(DOCKER_WORKING_DIR) && cp -r . $(DOCKER_WORKING_DIR)
   # - script: . $(HOME)/.bashrc_mdolab && cd $(DOCKER_WORKING_DIR) && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make;
   # - script: . $(HOME)/.bashrc_mdolab && cd $(DOCKER_WORKING_DIR) && pip install .
