--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ jobs:
   steps:
   - script: ls && ls -a /home/mdolabuser && pwd
   - script: printenv
-  - script: rm -rf $(DOCKER_MOUNT_DIR) && cp -r . $(DOCKER_MOUNT_DIR)
+  - script: docker exec app /bin/bash -c "rm -rf $(DOCKER_WORKING_DIR) && cp -r . $(DOCKER_WORKING_DIR)"
   # - script: . $(HOME)/.bashrc_mdolab && cd $(DOCKER_WORKING_DIR) && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make;
   # - script: . $(HOME)/.bashrc_mdolab && cd $(DOCKER_WORKING_DIR) && pip install .
   - script: . $(HOME)/.bashrc_mdolab && cd $(DOCKER_WORKING_DIR) && testflo . -v
