--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,16 +10,16 @@ jobs:
 - job:
   pool:
     vmImage: 'ubuntu-latest'
-  container:
-    image: mdolab/public:$(DOCKER_TAG)
-    options: --user 0:0
+
   steps:
-  - script: ls && ls -a /home/mdolabuser && pwd
-  - script: printenv
-  - script: docker exec app /bin/bash -c "rm -rf $(DOCKER_WORKING_DIR) && cp -r . $(DOCKER_WORKING_DIR)"
-  # - script: . $(HOME)/.bashrc_mdolab && cd $(DOCKER_WORKING_DIR) && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make;
-  # - script: . $(HOME)/.bashrc_mdolab && cd $(DOCKER_WORKING_DIR) && pip install .
-  - script: . $(HOME)/.bashrc_mdolab && cd $(DOCKER_WORKING_DIR) && testflo . -v
-  # - script: docker rm -f app
-  workspace:
-    clean: all
+  - script: docker pull mdolab/public:$DOCKER_TAG
+  - script: docker run -t -d 
+        --name app
+        --mount "type=bind,src=$(pwd),target=$DOCKER_MOUNT_DIR"
+        mdolab/public:$DOCKER_TAG
+        /bin/bash
+  - script: docker exec -it app /bin/bash -c "rm -rf $DOCKER_WORKING_DIR && cp -r $DOCKER_MOUNT_DIR $DOCKER_WORKING_DIR"
+  - script: docker exec -it app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make";
+  - script: docker exec -it app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && pip install ."
+  - script: docker exec -it app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && testflo . -v"
+  - script: docker rm -f app
