--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,8 +18,9 @@ jobs:
         --mount "type=bind,src=$(pwd),target=$DOCKER_MOUNT_DIR"
         mdolab/public:$DOCKER_TAG
         /bin/bash
-  - script: ls -a && pwd && ls $DOCKER_WORKING_DIR
-  - script: echo $DOCKER_WORKING_DIR
+  - script: ls -a && pwd
+  - script: docker exec app /bin/bash -c "echo $DOCKER_WORKING_DIR"
+  - script: docker exec app /bin/bash -c "ls -a $DOCKER_WORKING_DIR"
   - script: docker exec app /bin/bash -c "rm -rf $DOCKER_WORKING_DIR && cp -r $DOCKER_MOUNT_DIR $DOCKER_WORKING_DIR"
   - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make";
   - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && pip install ."
