--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,8 @@
 variables:
   REPO_NAME: pyspline
   HOME: /home/mdolabuser/
-  DOCKER_WORKING_DIR: /home/mdolabuser/repos/$REPO_NAME
-  DOCKER_MOUNT_DIR: /home/mdolabuser/travis/$REPO_NAME
+  DOCKER_WORKING_DIR: /home/mdolabuser/repos/${{ variables.REPO_NAME }}
+  DOCKER_MOUNT_DIR: /home/mdolabuser/travis/${{ variables.REPO_NAME }}
 
   DOCKER_TAG: u18-gcc-ompi-stable
 
@@ -12,19 +12,19 @@ jobs:
     vmImage: 'ubuntu-latest'
 
   steps:
-  - script: docker pull mdolab/public:$DOCKER_TAG
+  - script: docker pull mdolab/public:${{ variables.DOCKER_TAG }}
   - script: docker run -t -d 
         --name app
-        --mount "type=bind,src=$(pwd),target=$DOCKER_MOUNT_DIR"
-        mdolab/public:$DOCKER_TAG
+        --mount "type=bind,src=$(pwd),target=${{ DOCKER_MOUNT_DIR }}"
+        mdolab/public:${{ variables.DOCKER_TAG }}
         /bin/bash
   - script: ls -a && pwd
-  - script: docker exec app /bin/bash -c "echo $DOCKER_WORKING_DIR"
-  - script: docker exec app /bin/bash -c "ls -a $DOCKER_WORKING_DIR"
-  - script: docker exec app /bin/bash -c "echo $DOCKER_MOUNT_DIR"
-  - script: docker exec app /bin/bash -c "ls -a $DOCKER_WORKING_DIR"
-  - script: docker exec app /bin/bash -c "rm -rf $DOCKER_WORKING_DIR && cp -r $DOCKER_MOUNT_DIR $DOCKER_WORKING_DIR"
-  - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make";
-  - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && pip install ."
-  - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd $DOCKER_WORKING_DIR && testflo . -v"
+  - script: docker exec app /bin/bash -c "echo ${{ DOCKER_WORKING_DIR }}"
+  - script: docker exec app /bin/bash -c "ls -a ${{ DOCKER_WORKING_DIR }}"
+  - script: docker exec app /bin/bash -c "echo  ${{ DOCKER_MOUNT_DIR }}"
+  - script: docker exec app /bin/bash -c "ls -a ${{ DOCKER_MOUNT_DIR }}"
+  - script: docker exec app /bin/bash -c "rm -rf ${{ DOCKER_WORKING_DIR }} && cp -r ${{ DOCKER_MOUNT_DIR }} ${{ DOCKER_WORKING_DIR }}"
+  - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd ${{ DOCKER_WORKING_DIR }} && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make";
+  - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd ${{ DOCKER_WORKING_DIR }} && pip install ."
+  - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd ${{ DOCKER_WORKING_DIR }} && testflo . -v"
   - script: docker rm -f app
