--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,19 +4,22 @@ variables:
   DOCKER_WORKING_DIR: /home/mdolabuser/repos/${{ variables.REPO_NAME }}
   DOCKER_MOUNT_DIR: /home/mdolabuser/travis/${{ variables.REPO_NAME }}
 
-  DOCKER_TAG: u18-gcc-ompi-stable
 
 jobs:
 - job:
   pool:
     vmImage: 'ubuntu-latest'
+  strategy:
+    matrix:
+      'u18-gcc-ompi-stable':
+        DOCKER_TAG: u18-gcc-ompi-stable
 
   steps:
-  - script: docker pull mdolab/public:${{ variables.DOCKER_TAG }}
+  - script: docker pull mdolab/public:${{ DOCKER_TAG }}
   - script: docker run -t -d 
         --name app
         --mount "type=bind,src=$(pwd),target=${{ variables.DOCKER_MOUNT_DIR }}"
-        mdolab/public:${{ variables.DOCKER_TAG }}
+        mdolab/public:${{ DOCKER_TAG }}
         /bin/bash
   - script: docker exec app /bin/bash -c "rm -rf ${{ variables.DOCKER_WORKING_DIR }} && cp -r ${{ variables.DOCKER_MOUNT_DIR }} ${{ variables.DOCKER_WORKING_DIR }}"
   - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd ${{ variables.DOCKER_WORKING_DIR }} && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make";
