--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,7 @@ resources:
   - repository: .github  # identifier (A-Z, a-z, 0-9, and underscore)
     type: github  # see the following "Type" topic
     name: mdolab/.github  # repository name (format depends on `type`)
+    endpoint: GitHub
 
 jobs:
 # - job:
