--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,7 @@ jobs:
   steps:
   - script: |
       ls -a && pwd
+      cp .github/.flake8 .
       python3 -m pip install -U pip
       pip3 install flake8
       python3 -m flake8 . --count --show-source --statistics
