--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,7 +42,7 @@ jobs:
 - job: flake8
   steps:
   - script: |
-      ls -a .github && pwd
+      ls -a .github && ls -a ../
       cp ../.github/.flake8 .
       python3 -m pip install -U pip
       pip3 install flake8
