--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,9 +41,10 @@ jobs:
 
 - job: flake8
   steps:
+  - checkout: mdolab/.github
   - script: |
-      ls -a .github && ls -a ../a && ls -a ../b
-      cp ../.github/.flake8 .
+      ls -a .github && ls -a ../
+      cp .github/.flake8 .
       python3 -m pip install -U pip
       pip3 install flake8
       python3 -m flake8 . --count --show-source --statistics
