--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,10 +41,14 @@ jobs:
 
 - job: flake8
   steps:
+  - script: |
+      mkdir github
+      cd github
   - checkout: github_template
   - script: |
-      ls -a .github && ls -a .
-      cp .github/.flake8 .
+      cd ..
+      ls -a github && ls -a .
+      cp github/.flake8 .
       python3 -m pip install -U pip
       pip3 install flake8
       python3 -m flake8 . --count --show-source --statistics
