--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,14 +41,12 @@ jobs:
 
 - job: flake8
   steps:
-  - script: |
-      mkdir github
-      cd github
+  - checkout: self
   - checkout: github_template
   - script: |
-      cd ..
-      ls -a github && ls -a .
-      cp github/.flake8 .
+      ls -a .
+      cd pyspline
+      cp ../.github/.flake8 .
       python3 -m pip install -U pip
       pip3 install flake8
       python3 -m flake8 . --count --show-source --statistics
