--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,10 +14,10 @@ resources:
     name: bernardopacini/.azure  # repository name (format depends on `type`)
     endpoint: bernardopacini
   
-jobs: 
-  - template: azure_template.yaml@azure_template
-    parameters:
-      REPO_NAME: ${{ variables.REPO_NAME }} 
+# jobs: 
+template: azure_template.yaml@azure_template
+  parameters:
+    REPO_NAME: ${{ variables.REPO_NAME }} 
       # DOCKER_WORKING_DIR: ${{ variables.DOCKER_WORKING_DIR }}
       # DOCKER_MOUNT_DIR: ${{ variables.DOCKER_MOUNT_DIR}} 
 # - job:
