--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,64 +1,17 @@
 variables:
   REPO_NAME: pyspline
-  # MDOLABUSER: /home/mdolabuser/
-  # DOCKER_WORKING_DIR: /home/mdolabuser/repos/${{ variables.REPO_NAME }}
-  # DOCKER_MOUNT_DIR: /home/mdolabuser/travis/${{ variables.REPO_NAME }}
 
 pool:
     vmImage: 'ubuntu-latest'
 
 resources:
   repositories:
-  - repository: azure_template  # identifier (A-Z, a-z, 0-9, and underscore)
-    type: github  # see the following "Type" topic
-    name: bernardopacini/.azure  # repository name (format depends on `type`)
+  - repository: azure_template
+    type: github
+    name: bernardopacini/.azure
     endpoint: bernardopacini
-  
+
 jobs: 
   - template: azure_template.yaml@azure_template
     parameters:
-      REPO_NAME: ${{ variables.REPO_NAME }}
-      # DOCKER_WORKING_DIR: ${{ variables.DOCKER_WORKING_DIR }}
-      # DOCKER_MOUNT_DIR: ${{ variables.DOCKER_MOUNT_DIR}} 
-# - job:
-#   strategy:
-#     matrix:
-#       'c7-gcc-ompi-latest':
-#         DOCKER_TAG: c7-gcc-ompi-latest
-#       'c7-intel-impi-latest':
-#         DOCKER_TAG: c7-intel-impi-latest
-#       'u20-gcc-ompi-latest':
-#         DOCKER_TAG: u20-gcc-ompi-latest
-#       'u20-gcc-ompi-stable':
-#         DOCKER_TAG: u20-gcc-ompi-stable
-#   steps:
-#   - script: docker pull mdolab/public:$(DOCKER_TAG)
-#   - script: docker run -t -d 
-#         --name app
-#         --mount "type=bind,src=$(pwd),target=${{ variables.DOCKER_MOUNT_DIR }}"
-#         mdolab/public:$(DOCKER_TAG)
-#         /bin/bash
-#   - script: docker exec app /bin/bash -c "rm -rf ${{ variables.DOCKER_WORKING_DIR }} && cp -r ${{ variables.DOCKER_MOUNT_DIR }} ${{ variables.DOCKER_WORKING_DIR }}"
-#   - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd ${{ variables.DOCKER_WORKING_DIR }} && cp config/defaults/config.LINUX_GFORTRAN.mk config/config.mk && make";
-#   - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd ${{ variables.DOCKER_WORKING_DIR }} && pip install ."
-#   - script: docker exec app /bin/bash -c ". \$HOME/.bashrc_mdolab && cd ${{ variables.DOCKER_WORKING_DIR }} && testflo . -v"
-#   - script: docker rm -f app 
-
-# - job: flake8
-#   steps:
-#   - checkout: self
-#   - checkout: github_template
-#   - script: |
-#       ls -a .
-#       cd pyspline
-#       cp ../.github/.flake8 .
-#       python3 -m pip install -U pip
-#       pip3 install flake8
-#       python3 -m flake8 . --count --show-source --statistics
-
-# - job: black
-#   steps:
-#   - script: |
-#       python3 -m pip install -U pip
-#       pip3 install black==20.8b1
-#       python3 -m black . --check --diff -l 120
+      REPO_NAME: ${{ variables.REPO_NAME }} 
