--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,9 @@
 variables:
   REPO_NAME: pyspline
   COMPLEX: false
+  GCC_CONFIG: config/defaults/config.LINUX_GFORTRAN.mk
+  INTEL_CONFIG: config/defaults/config.LINUX_INTEL.mk
+  INPUT_FILES: false
 
 pool:
     vmImage: 'ubuntu-latest'
@@ -17,3 +20,6 @@ jobs:
     parameters:
       REPO_NAME: ${{ variables.REPO_NAME }}
       COMPLEX: ${{ variables.COMPLEX }}
+      GCC_CONFIG: ${{ variables.GCC_CONFIG }}
+      INTEL_CONFIG: ${{ variables.INTEL_CONFIG }}
+      INPUT_FILES: ${{ variables.INPUT_FILES }}
