--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ extends:
   template: azure_extend.yaml@azure_template
   parameters:
     REPO_NAME: pyspline
-    COMPLEX: true
+    COMPLEX: false
     GCC_CONFIG: config/defaults/config.LINUX_GFORTRAN.mk
     INTEL_CONFIG: config/defaults/config.LINUX_INTEL.mk
     INPUT_FILES: true
