--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,27 +17,9 @@ extends:
     INTEL_CONFIG: config/defaults/config.LINUX_INTEL.mk
     INPUT_FILES: false
     STYLE_CHECK: true
-    STEPS_MAKE: make
-    STEPS_INSTALL: pip install .
-    STEPS_TEST: testflo -v . -n 1
-
-# - job:
-#   - template: matrix.yaml@azure_template
-#   # strategy:
-#   #   matrix: ${{ parameters.TestMatrix }}
-#   steps:
-#   - script: echo here
-    # script: echo {{ parameters.TestMatrix }}
-    # - template: before-install.yaml@azure_template
-  #   parameters: 
-  #     REPO_NAME: ${{ variables.REPO_NAME }}
-  #     COMPLEX: ${{ variables.COMPLEX }}
-  #     GCC_CONFIG: ${{ variables.GCC_CONFIG }}
-  #     INTEL_CONFIG: ${{ variables.INTEL_CONFIG }}
-  #     INPUT_FILES: ${{ variables.INPUT_FILES }}
-  #     STYLE_CHECK: ${{ variables.STYLE_CHECK }}
-
-  # - template: style_check.yaml@azure_template
-  #   parameters:
-  #     REPO_NAME: ${{ variables.REPO_NAME }}
-  #     STYLE_CHECK: ${{ variables.STYLE_CHECK }}
+    STEPS_MAKE_REAL: make
+    STEPS_INSTALL_REAL: pip install .
+    STEPS_TEST_REAL: testflo -v . -n 1
+    STEPS_MAKE_COMPLEX: make && make -f Makefile_CS PETSC_ARCH=complex-opt-\$COMPILERS-\$PETSCVERSION
+    STEPS_INSTALL_COMPLEX: pip install .
+    STEPS_TEST_COMPLEX: testflo -v . -n 1
